# ai-mem

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.py  pyproject.toml
ai_mem/: agent_context.py  dream_cli.py  hook.py  memory_index.py  posttool_hook.py  pretool_hook.py  repo_context.py  repo_seeder.py  server.py  session_stats.py  stop_hook.py  userprompt_hook.py
ai_mem/application/: add_edge.py  add_memory.py  build_features.py  cleanup_memory.py  delete_memory.py  detect_split_hints.py  dream_memory.py  get_edges.py  get_memory.py  list_collections.py  list_entries.py  load_ranker_config.py  query_memory.py  ranker_registry.py  split_memory.py  track_access.py  train_ranker.py
ai_mem/domain/: learning.py  memory.py
ai_mem/infrastructure/: bm25_repository.py  chroma_repository.py  null_ranker.py  ranker_storage.py  torch_ranker.py
docs/: ai-mem-vs-memPalace.md  architecture.md  automation.md  collections.md  developer-guide.md  epistemology-framework.md  friction-and-research.md  hooks.md  hybrid-search.md  reranking.md
skills/: reflect.md
tests/: conftest.py  test_agent_context.py  test_hook.py  test_memory_index.py  test_posttool_hook.py  test_repo_seeder.py  test_server_mem_add.py  test_session_stats.py  test_userprompt_hook.py
tests/application/: test_add_memory.py  test_build_features.py  test_cleanup_memory.py  test_detect_split_hints.py  test_dream_memory.py  test_edges.py  test_list_entries.py  test_load_ranker_config.py  test_query_memory.py  test_split_memory.py  test_train_ranker.py  test_train_ranker_hybrid.py
(+5 files in other folders)
