[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-mem"
version = "0.1.0"
description = "Semantic memory MCP server for AI agents — ChromaDB-backed, workspace-scoped."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Istvan Lovas"}
]
dependencies = [
  "chromadb>=0.5.0",
  "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
ml = [
  "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_mem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
